# sandboxdemo

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json
SandboxBorder/: SandboxBorder.cpp  SandboxBorder.h
driver/SandboxFlt/: SandboxFlt.sln
driver/SandboxFlt/SandboxFlt/: SandboxFlt.h  SandboxFlt.inf  SandboxFlt.vcxproj  SandboxFlt_BoxMgr.c  SandboxFlt_Filter.c  SandboxFlt_Main.c  SandboxIpc.h
driver/include/: SandboxFlt.h  SandboxIpc.h
include/: DriverManager.h  MainWindow.h  NtDefs.h  ProcessMonitor.h  SandboxEngine.h  Sandboxexplorer.h  StringUtil.h
src/: DriverManager.cpp  MainWindow.cpp  ProcessMonitor.cpp  SandboxEngine.cpp  SandboxEngine_Inject.cpp  Sandboxexplorer.cpp  StringUtil.cpp  main.cpp
